# cicsim

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  main.yml  release.yml
cicsim/: __init__.py  cdsconf.py  cicsim.py  cmdarchive.py  cmdip.py  cmdoppoint.py  cmdresults.py  cmdrun.py  cmdrunng.py  cmdsimdir.py  cmdsimdirng.py  cmdspider.py  cmdsummary.py  cmdwave.py  cmdwave_pg.py  command.py  conf.py  ngraw.py  pivot.py  plot.py  runconf.py  simcalc.py  spec.py  spectrewriter.py  spiceparser.py  template_make.py  theme.py  utils.py  wavebrowser.py  wavefiles.py  wavegraph.py
cicsim/commands/: cmdip.py  cmdresults.py  cmdrun.py  cmdrunng.py  cmdsimdir.py
docs/: 404.html  Gemfile  _config.yml  about.md  archive.md  index.md  plot.md  portreplace.md  results.md  run.md  simcell.md  srun.md  summary.md  template.md  wave.md
docs/_site/assets/css/: style.css
scripts/: make-cicwave-shortcut.ps1
tests/: cicsim.yaml  gendoc.py
tests/BFX1_CV/: Makefile  README.md  results.py  tran.md  tran.scs
tests/IVX1_CV/: Makefile  cicsim.yaml  dut.cfg  tran.scs
tests/TB_ADC/: Makefile  cicsim.yaml  tran.scs
tests/archive/: Makefile  archive.md
tests/docker/: Dockerfile  Makefile
tests/index/: Makefile  index.md
tests/inv/: dut.cfg  tran.scs
tests/ip/: Makefile  module_template.yaml
tests/plot/: Makefile  plot.md  test.raw
tests/portreplace/: Makefile  portreplace.md
tests/project/lib/spectre/: mos.scs  supply.scs
tests/project/work/: wulff
tests/results/: Makefile  results.md
tests/sim/: Makefile  run.md
tests/sim/BFX1_CV/: BFX1_CV_model.scs  Makefile  cicsim.yaml  dut.scs  tran.md  tran.ocn  tran.py  tran.scs
tests/sim/ngspice/: cicsim.yaml
tests/sim/ngspice/basic/: Makefile  cicsim.yaml  summary.yaml  tran.meas  tran.py  tran.spi  tran.yaml  tran_SchTtVt.spi
tests/sim/ngspice/basic/results/: tran_mc.csv  tran_mc.html  tran_mc.md  tran_tempvall.csv  tran_tempvall.html  tran_tempvall.md  tran_typical.csv  tran_typical.html  tran_typical.md
tests/sim/project/lib/spectre/: bjt.scs  cap.scs  common.scs  diode.scs  res.scs  temperature.scs
tests/simcell/: Makefile  simcell.md
tests/srun/: Makefile  srun.md
tests/summary/: Makefile  summary.md
tests/sun_sar9b_gf130n/BFX1_CV/: BFX1_CV_schematic.scs  Makefile  cicsim.yaml  dut.scs  results.py
tests/template/: Makefile  template.md
tests/unittests/: test_digital_synth.py  test_export_data.py  test_iqvsa_parser.py  test_meas_errors.py  test_spec_min_zero.py  test_spiceparser.py  test_unit_detection.py  test_vcd_parser.py  test_wavefiles_lazy.py
tests/wave/: Makefile  gen_testdata.py  pivot_data.csv  pivot_spec.yaml  session_dual.cicwave.yaml  session_multi.cicwave.yaml  session_pivot.cicwave.yaml  session_single.cicwave.yaml  test.csv  wave.md
