[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicsim"
version = "0.1.17"
authors = [
  { name="Carsten Wulff", email="carsten@wulff.no" },
]
dependencies = [
  "numpy",
  "pandas",
  "jinja2",
  "matplotlib"
]
license = "MIT"
description = "Custom IC Creator Simulation Tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
cicsim = "cicsim.cicsim:cli"

[project.urls]
"Homepage" = "https://github.com/wulffern/cicsim"
"Bug Tracker" = "https://github.com/wulffern/cicsim/issues"
