[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicsim"
version = "0.2.0"
authors = [
  { name="Carsten Wulff", email="carsten@wulff.no" },
]
dependencies = [
  "numpy",
  "pandas",
  "jinja2",
  "matplotlib",
  "click",
  "pyyaml",
  "tabulate",
]
description = "Custom IC Creator Simulation Tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
pg = ["PySide6", "pyqtgraph"]

[project.scripts]
cicsim = "cicsim.cicsim:cli"

[project.urls]
"Homepage" = "https://github.com/wulffern/cicsim"
"Bug Tracker" = "https://github.com/wulffern/cicsim/issues"
