[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicsim"
version = "0.3.0"
authors = [
  { name="Carsten Wulff", email="carsten@wulff.no" },
]
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "jinja2",
  "matplotlib",
  "click",
  "pyyaml",
  "tabulate",
  "rich",
  "tqdm",
]
description = "Custom IC Creator Simulation Tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# Advanced waveform viewer with PyQtGraph backend
wave = ["cicwave"]

[project.scripts]
cicsim = "cicsim.cicsim:cli"
cicwave = "cicsim.cicsim:cicwave"

# GUI-script entry points get a *w.exe wrapper on Windows that uses
# pythonw.exe, so launching from a Start-menu / Desktop shortcut does
# not pop up a console window. Keep the plain cicwave above for use
# from a terminal (where stdout/stderr are visible).
[project.gui-scripts]
cicwavew = "cicsim.cicsim:cicwave"

[project.urls]
"Homepage" = "https://github.com/wulffern/cicsim"
"Bug Tracker" = "https://github.com/wulffern/cicsim/issues"
